--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,30 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-*.pyc
+#__pycache__/
+#*.py[cod]
+#*$py.class
+#*.pyc
 
 # Virtual environment
-env/
-venv/
+#env/
+#venv/
 
 # Jupyter Notebook checkpoints
-.ipynb_checkpoints/
+#.ipynb_checkpoints/
 
 # VSCode
-.vscode/
+#.vscode/
 
 # macOS Finder metadata
-.DS_Store
+#.DS_Store
 
 # Logs
-*.log
+#*.log
 
 # SQLite database
-*.sqlite3
+#*.sqlite3
 
 #Pickle files
-*.pkl
+#*.pkl
 
 #Data
-*.csv
+#*.csv
